finished starfield update function

--- a/_TEMPLATE/index.html
+++ b/_TEMPLATE/index.html
@@ -1,4 +1,7 @@
+<!DOCTYPE html>
+
 <html>
+
 <head>
   <meta charset="UTF-8">
   <script language="javascript" type="text/javascript" src="libraries/p5.js"></script>
@@ -12,4 +15,5 @@
 
 <body>
 </body>
+
 </html>
