--- a/G4_0_MatrixRain/index.html
+++ b/G4_0_MatrixRain/index.html
@@ -10,7 +10,12 @@
   <!--<script language="javascript" src="libraries/p5.sound.js"></script>-->
   <script language="javascript" type="text/javascript" src="sketch.js"></script>
   <!-- this line removes any default padding and style. you might only need one of these values set. -->
-  <style> body {padding: 0; margin: 0;} </style>
+  <style>
+    body {
+      padding: 0;
+      margin: 0;
+    }
+  </style>
 </head>
 
 <body>
